feat: add validation, error handling, logging and tests